--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('reviews_rb.csv')"
+    "df = pd.read_csv('./data/reviews_rb.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -198,13 +198,435 @@
        "4  Many thanks for this beer to Erzengel. Pours l...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_csv('./data/m_ratings_rb.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>beer_name</th>\n",
+       "      <th>beer_id</th>\n",
+       "      <th>brewery_name</th>\n",
+       "      <th>brewery_id</th>\n",
+       "      <th>style</th>\n",
+       "      <th>abv</th>\n",
+       "      <th>date</th>\n",
+       "      <th>user_name</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>appearance</th>\n",
+       "      <th>aroma</th>\n",
+       "      <th>palate</th>\n",
+       "      <th>taste</th>\n",
+       "      <th>overall</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Ards Bally Black Stout</td>\n",
+       "      <td>155699</td>\n",
+       "      <td>Ards Brewing Co.</td>\n",
+       "      <td>13538</td>\n",
+       "      <td>Stout</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1429178400</td>\n",
+       "      <td>ciaranc</td>\n",
+       "      <td>151109</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>17</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>Bottle, gift from Aaron. Black, big head, lots...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Ards Bally Black Stout</td>\n",
+       "      <td>155699</td>\n",
+       "      <td>Ards Brewing Co.</td>\n",
+       "      <td>13538</td>\n",
+       "      <td>Stout</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1427796000</td>\n",
+       "      <td>Rowlymo</td>\n",
+       "      <td>198957</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>500ml Bottle in Bittles bar Belfast. Chocolate...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ards Bally Black Stout</td>\n",
+       "      <td>155699</td>\n",
+       "      <td>Ards Brewing Co.</td>\n",
+       "      <td>13538</td>\n",
+       "      <td>Stout</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1421665200</td>\n",
+       "      <td>Don2711</td>\n",
+       "      <td>285162</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>Great one and made very local to me. Bottle bo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Ards Bally Black Stout</td>\n",
+       "      <td>155699</td>\n",
+       "      <td>Ards Brewing Co.</td>\n",
+       "      <td>13538</td>\n",
+       "      <td>Stout</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1380621600</td>\n",
+       "      <td>genegenie</td>\n",
+       "      <td>224156</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Deep roasted aroma, good dark brown/black colo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Ards Bally Black Stout</td>\n",
+       "      <td>155699</td>\n",
+       "      <td>Ards Brewing Co.</td>\n",
+       "      <td>13538</td>\n",
+       "      <td>Stout</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1371549600</td>\n",
+       "      <td>kiwianer</td>\n",
+       "      <td>88501</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>The head is medium, the body black. It smells ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0               beer_name  beer_id      brewery_name  brewery_id   \n",
+       "0           0  Ards Bally Black Stout   155699  Ards Brewing Co.       13538  \\\n",
+       "1           1  Ards Bally Black Stout   155699  Ards Brewing Co.       13538   \n",
+       "2           2  Ards Bally Black Stout   155699  Ards Brewing Co.       13538   \n",
+       "3           3  Ards Bally Black Stout   155699  Ards Brewing Co.       13538   \n",
+       "4           4  Ards Bally Black Stout   155699  Ards Brewing Co.       13538   \n",
+       "\n",
+       "   style  abv        date  user_name  user_id  appearance  aroma  palate   \n",
+       "0  Stout  4.6  1429178400    ciaranc   151109           3      7       2  \\\n",
+       "1  Stout  4.6  1427796000    Rowlymo   198957           4      7       4   \n",
+       "2  Stout  4.6  1421665200    Don2711   285162           4      8       5   \n",
+       "3  Stout  4.6  1380621600  genegenie   224156           5      8       3   \n",
+       "4  Stout  4.6  1371549600   kiwianer    88501           4      7       4   \n",
+       "\n",
+       "   taste  overall  rating                                               text  \n",
+       "0      8       17     3.7  Bottle, gift from Aaron. Black, big head, lots...  \n",
+       "1      8       15     3.8  500ml Bottle in Bittles bar Belfast. Chocolate...  \n",
+       "2      7       17     4.1  Great one and made very local to me. Bottle bo...  \n",
+       "3      5       19     4.0  Deep roasted aroma, good dark brown/black colo...  \n",
+       "4      7       14     3.6  The head is medium, the body black. It smells ...  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = pd.read_csv(\"./data/m_ratings_text_rb.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>beer_name</th>\n",
+       "      <th>beer_id</th>\n",
+       "      <th>brewery_name</th>\n",
+       "      <th>brewery_id</th>\n",
+       "      <th>style</th>\n",
+       "      <th>abv</th>\n",
+       "      <th>date</th>\n",
+       "      <th>user_name</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>appearance</th>\n",
+       "      <th>aroma</th>\n",
+       "      <th>palate</th>\n",
+       "      <th>taste</th>\n",
+       "      <th>overall</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Ards Bally Black Stout</td>\n",
+       "      <td>155699</td>\n",
+       "      <td>Ards Brewing Co.</td>\n",
+       "      <td>13538</td>\n",
+       "      <td>Stout</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1429178400</td>\n",
+       "      <td>ciaranc</td>\n",
+       "      <td>151109</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>17</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>Bottle, gift from Aaron. Black, big head, lots...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Ards Bally Black Stout</td>\n",
+       "      <td>155699</td>\n",
+       "      <td>Ards Brewing Co.</td>\n",
+       "      <td>13538</td>\n",
+       "      <td>Stout</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1427796000</td>\n",
+       "      <td>Rowlymo</td>\n",
+       "      <td>198957</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>500ml Bottle in Bittles bar Belfast. Chocolate...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ards Bally Black Stout</td>\n",
+       "      <td>155699</td>\n",
+       "      <td>Ards Brewing Co.</td>\n",
+       "      <td>13538</td>\n",
+       "      <td>Stout</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1421665200</td>\n",
+       "      <td>Don2711</td>\n",
+       "      <td>285162</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>Great one and made very local to me. Bottle bo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Ards Bally Black Stout</td>\n",
+       "      <td>155699</td>\n",
+       "      <td>Ards Brewing Co.</td>\n",
+       "      <td>13538</td>\n",
+       "      <td>Stout</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1380621600</td>\n",
+       "      <td>genegenie</td>\n",
+       "      <td>224156</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Deep roasted aroma, good dark brown/black colo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Ards Bally Black Stout</td>\n",
+       "      <td>155699</td>\n",
+       "      <td>Ards Brewing Co.</td>\n",
+       "      <td>13538</td>\n",
+       "      <td>Stout</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1371549600</td>\n",
+       "      <td>kiwianer</td>\n",
+       "      <td>88501</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>The head is medium, the body black. It smells ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0               beer_name  beer_id      brewery_name  brewery_id   \n",
+       "0           0  Ards Bally Black Stout   155699  Ards Brewing Co.       13538  \\\n",
+       "1           1  Ards Bally Black Stout   155699  Ards Brewing Co.       13538   \n",
+       "2           2  Ards Bally Black Stout   155699  Ards Brewing Co.       13538   \n",
+       "3           3  Ards Bally Black Stout   155699  Ards Brewing Co.       13538   \n",
+       "4           4  Ards Bally Black Stout   155699  Ards Brewing Co.       13538   \n",
+       "\n",
+       "   style  abv        date  user_name  user_id  appearance  aroma  palate   \n",
+       "0  Stout  4.6  1429178400    ciaranc   151109           3      7       2  \\\n",
+       "1  Stout  4.6  1427796000    Rowlymo   198957           4      7       4   \n",
+       "2  Stout  4.6  1421665200    Don2711   285162           4      8       5   \n",
+       "3  Stout  4.6  1380621600  genegenie   224156           5      8       3   \n",
+       "4  Stout  4.6  1371549600   kiwianer    88501           4      7       4   \n",
+       "\n",
+       "   taste  overall  rating                                               text  \n",
+       "0      8       17     3.7  Bottle, gift from Aaron. Black, big head, lots...  \n",
+       "1      8       15     3.8  500ml Bottle in Bittles bar Belfast. Chocolate...  \n",
+       "2      7       17     4.1  Great one and made very local to me. Bottle bo...  \n",
+       "3      5       19     4.0  Deep roasted aroma, good dark brown/black colo...  \n",
+       "4      7       14     3.6  The head is medium, the body black. It smells ...  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1020599, 17)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1020638, 17)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.shape"
    ]
   },
   {
