--- a/preprocessing2.ipynb
+++ b/preprocessing2.ipynb
@@ -22,24 +22,116 @@
    "metadata": {},
    "source": [
     "## Content:\n",
-    "[1. Data preprocessing](##Data-Preprocessing)\n",
+    "[1. Data preprocessing](##Data-preprocessing)\n",
+    "- [1.1 Convert txt files into CSV files](##Data-format-conversion)\n",
     "\n",
-    "- [1.1 Features in 'Ratings' dataset](##Features-in-'Ratings'-dataset)\n",
+    "[2. Data description](##Data-description)\n",
     "\n",
-    "- [1.2 Features in 'Users' dataset](##Features-in-'Users'-dataset)\n",
+    "- [2.1 Features in 'Ratings' dataset](##Features-in-'Ratings'-dataset)\n",
     "\n",
-    "- [1.3 Features in 'Breweries' dataset](##Features-in-'Breweries'-dataset)\n",
+    "- [2.2 Features in 'Users' dataset](##Features-in-'Users'-dataset)\n",
     "\n",
-    "[2. Mathematical Details for Proposed Methods](##Mathematical-Details)\n",
+    "- [2.3 Features in 'Breweries' dataset](##Features-in-'Breweries'-dataset)\n",
     "\n",
-    "- [2.1 K-means](##K-means)"
+    "[3. Mathematical Details for Proposed Methods](##Mathematical-Details)\n",
+    "\n",
+    "- [3.1 K-means](##K-means)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Preprocessing"
+    "## Data format conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert txt files into csv files\n",
+    "def txt_to_csv(filepath, output_file_name):\n",
+    "    print(\"opening....\")\n",
+    "    with open(filepath) as f:\n",
+    "        txt = f.read()\n",
+    "    print(\"spliting....\")\n",
+    "    lis_rating = txt.split('\\n\\n')\n",
+    "    print(\"formating....\")\n",
+    "    data_list_dict = []\n",
+    "    for item in lis_rating:\n",
+    "        try:\n",
+    "            p = {ii.split(\": \")[0]: ii.split(\": \")[1] for ii in item.split('\\n')}\n",
+    "        except:\n",
+    "            print(item)\n",
+    "            continue\n",
+    "        data_list_dict.append(p)\n",
+    "    print(\"dataframe....\")\n",
+    "    df = pd.DataFrame(data_list_dict)\n",
+    "    print(\"to csv file.....\")\n",
+    "    df.to_csv(output_file_name, sep=',', encoding='utf-8')\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp1 = \"./BeerAdvocate/reviews.txt\"\n",
+    "fp2 = \"./matched_beer_data/ratings_ba.txt\"\n",
+    "fp3 = \"./matched_beer_data/ratings_rb.txt\"\n",
+    "fp4 = \"./matched_beer_data/ratings_with_text_ba.txt\"\n",
+    "fp5 = \"./matched_beer_data/ratings_with_text_rb.txt\"\n",
+    "fp6 = \"./RateBeer/ratings.txt\"\n",
+    "fp7 = \"./RateBeer/reviews.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ofn1 = \"reviews_ba.csv\"\n",
+    "ofn2 = \"m_ratings_ba.csv\"\n",
+    "ofn3 = \"m_reviews_rb.csv\"\n",
+    "ofn4 = \"m_ratings_text_ba.csv\"\n",
+    "ofn5 = \"m_ratings_text_rb.csv\"\n",
+    "ofn6 = \"ratings_rb.csv\"\n",
+    "ofn7 = \"reviews_rb.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df1 = txt_to_csv(fp1, ofn1)\n",
+    "# df2 = txt_to_csv(fp2, ofn2)\n",
+    "# df3 = txt_to_csv(fp3, ofn3)\n",
+    "# df4 = txt_to_csv(fp4, ofn4)\n",
+    "# df5 = txt_to_csv(fp5, ofn5)\n",
+    "# df6 = txt_to_csv(fp6, ofn6)\n",
+    "# df7 = txt_to_csv(fp7, ofn7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We found the data size is too big too handle during our conversion step. Therefore we plan to use matched data from two websites in the following step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data description"
    ]
   },
   {
@@ -1681,7 +1773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
