--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -21,28 +21,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Content:\n",
-    "[1. Data preprocessing](##Data-preprocessing)\n",
-    "- [1.1 Convert txt files into CSV files](##Data-format-conversion)\n",
+    "# Content:\n",
+    "[1. Data Preprocessing](##Data-Preprocessing)\n",
+    "- [1.1 Convert txt files into CSV files](###Data-format-conversion)\n",
     "\n",
-    "[2. Data description](##Data-description)\n",
+    "[2. Data Description](##Data-Description)\n",
     "\n",
-    "- [2.1 Features in 'Ratings' dataset](##Features-in-'Ratings'-dataset)\n",
+    "- [2.1 Features in 'Ratings' dataset](###Features-in-'Ratings'-dataset)\n",
     "\n",
-    "- [2.2 Features in 'Users' dataset](##Features-in-'Users'-dataset)\n",
+    "- [2.2 Features in 'Users' dataset](###Features-in-'Users'-dataset)\n",
     "\n",
-    "- [2.3 Features in 'Breweries' dataset](##Features-in-'Breweries'-dataset)\n",
+    "- [2.3 Features in 'Breweries' dataset](###Features-in-'Breweries'-dataset)\n",
     "\n",
     "[3. Mathematical Details for Proposed Methods](##Mathematical-Details)\n",
     "\n",
-    "- [3.1 K-means](##K-means)"
+    "- [3.1 K-means](###K-means)\n",
+    "\n",
+    "[4. Graph Network Modeling](##Graph-Network-Modeling)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data format conversion"
+    "## Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data format conversion"
    ]
   },
   {
@@ -81,6 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# read path\n",
     "fp1 = \"./BeerAdvocate/reviews.txt\"\n",
     "fp2 = \"./matched_beer_data/ratings_ba.txt\"\n",
     "fp3 = \"./matched_beer_data/ratings_rb.txt\"\n",
@@ -96,6 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# write path\n",
     "ofn1 = \"reviews_ba.csv\"\n",
     "ofn2 = \"m_ratings_ba.csv\"\n",
     "ofn3 = \"m_reviews_rb.csv\"\n",
@@ -131,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data description"
+    "## Data Description"
    ]
   },
   {
@@ -224,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Features in 'Ratings' dataset"
+    "### Features in 'Ratings' dataset"
    ]
   },
   {
@@ -1643,7 +1654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Features in 'Breweries' dataset"
+    "### Features in 'Breweries' dataset"
    ]
   },
   {
@@ -1749,6 +1760,13 @@
     "   For current $C$, recompute $m_l=\\frac{1}{|C_l|}\\sum\\limits_{C(i)=l}x_i$ for $l = 1, \\cdots k$.\t\n",
     "\n",
     "Alternate these two steps until the stop criterion."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph network modeling"
    ]
   },
   {
