update interactive instructions

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -4537,6 +4537,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.write_html(\"regional_analysis.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "go to https://htmlpreview.github.io/?https://github.com/epfl-ada/ada-2023-project-badanalysist/main/regional_analysis.html to view the above interactive map"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
