--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2121,6 +2121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# merge ratings_rb and beers_rb to get beer_without_brewery_name\n",
     "ratings_rb_name = ratings_rb.merge(beers_rb[['beer_name','beer_wout_brewery_name']], on =\"beer_name\" ,how = \"left\")\n",
     "# ratings_rb_name['beer_wout_brewery_name'].fillna(ratings_rb_withid['beer_name'], inplace=True)\n",
     "ratings_rb_name['beer_wout_brewery_name'].fillna(ratings_rb_name['beer_name'], inplace=True)\n",
@@ -2227,6 +2228,7 @@
     }
    ],
    "source": [
+    "# for RB data\n",
     "# Load pre-trained sentiment analysis model\n",
     "sentiment_analyzer = pipeline('sentiment-analysis')\n",
     "beer_names = ratings_rb_name['beer_wout_brewery_name']\n",
@@ -2280,6 +2282,7 @@
     }
    ],
    "source": [
+    "# for BA data\n",
     "sentiment_analyzer = pipeline('sentiment-analysis')\n",
     "beer_namesba= ratings_ba_name['beer_wout_brewery_name']\n",
     "\n",
@@ -2314,6 +2317,7 @@
    "outputs": [],
    "source": [
     "# NameSentiment is in [0,1] if POSITIVE; = is in [-1,0] if negative\n",
+    "# for RB data\n",
     "ratings_rb_name['NameSentiment'] = np.where(ratings_rb_name['sentiment'] == 'POSITIVE', \n",
     "                                                   ratings_rb_name['sentiment_score'], \n",
     "                                                   -ratings_rb_name['sentiment_score'])"
@@ -2325,6 +2329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# for BA data\n",
     "ratings_ba_name['NameSentiment'] = np.where(ratings_ba_name['sentiment'] == 'POSITIVE', \n",
     "                                                   ratings_ba_name['sentiment_score'], \n",
     "                                                   -ratings_ba_name['sentiment_score'])"
@@ -2389,7 +2394,9 @@
     "        # Handle cases where language detection fails\n",
     "        return \"unknown\"\n",
     "\n",
+    "    \n",
     "# Create a new column 'language'\n",
+    "# for RB data\n",
     "ratings_rb_withid_lang['language'] = ratings_rb_withid_lang['beer_wout_brewery_name'].apply(detect_language)"
    ]
   },
@@ -2399,6 +2406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# for BA data\n",
     "beer_names = ratings_ba_withid_lang['beer_wout_brewery_name']\n",
     "ratings_ba_withid_lang['language'] = ratings_ba_withid_lang['beer_wout_brewery_name'].apply(detect_language)"
    ]
@@ -2786,6 +2794,7 @@
     }
    ],
    "source": [
+    "# for RB data\n",
     "ratings_rb_withid2 = ratings_rb_withid_lang.dropna(subset=['NameSentiment', 'language', 'style', 'rating', 'sentiment_score'])\n",
     "\n",
     "# Set dummies\n",
@@ -3063,6 +3072,7 @@
     }
    ],
    "source": [
+    "# for BA data\n",
     "ratings_ba_withid2 = ratings_ba_withid_lang.dropna(subset=['NameSentiment', 'language', 'style', 'rating', 'sentiment_score'])\n",
     "\n",
     "# Set dummies\n",
@@ -5492,7 +5502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
