--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -44,9 +44,7 @@
     "\n",
     "[3. Mathematical Details for Proposed Methods](##Mathematical-Details)\n",
     "\n",
-    "- [3.1 K-means](###K-means)\n",
-    "\n",
-    "[4. Graph Network Modeling](##Graph-Network-Modeling)"
+    "- [3.1 K-means](###K-means)"
    ]
   },
   {
@@ -5502,7 +5500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
