--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -40,11 +40,25 @@
     "\n",
     "- [2.3 Features in 'Breweries' dataset](###Features-in-'Breweries'-dataset)\n",
     "\n",
-    "- [2.4 Beer Styles](###Beer-Styles)\n",
+    "- [2.4 Features in 'Beers' dataset](###Beer-Styles)\n",
     "\n",
-    "[3. Mathematical Details for Proposed Methods](##Mathematical-Details)\n",
+    "[3. Mathematical Details: K-means](##Mathematical-Details)\n",
     "\n",
-    "- [3.1 K-means](###K-means)"
+    "\n",
+    "[4. Features in beer's name](##Features-in-beer's-name)\n",
+    "\n",
+    "- [4.1 Sentiment analysis](###Sentiment-analysis-for-beer's-name)\n",
+    "\n",
+    "- [4.2 Indentity the language](###Indentity-the-language-for-beer's-name)\n",
+    "\n",
+    "- [4.3 Regress - Beer Name Reflect Beer Flavor](###Regress---Beer-Name-Reflect-Beer-Flavor)\n",
+    "\n",
+    "\n",
+    "[5. Beer Recommendation System](##Beer-Recommendation-System)\n",
+    "\n",
+    "- [5.1 Regional Analysis](###Regional-Analysis)\n",
+    "\n",
+    "- [5.2 Keyword analysis](###Keyword-analysis)"
    ]
   },
   {
@@ -124,21 +138,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df1 = txt_to_csv(fp1, ofn1)\n",
-    "# df2 = txt_to_csv(fp2, ofn2)\n",
-    "# df3 = txt_to_csv(fp3, ofn3)\n",
-    "# df4 = txt_to_csv(fp4, ofn4)\n",
-    "# df5 = txt_to_csv(fp5, ofn5)\n",
-    "# df6 = txt_to_csv(fp6, ofn6)\n",
-    "# df7 = txt_to_csv(fp7, ofn7)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,7 +192,7 @@
     }
    ],
    "source": [
-    "#  check nan element-wise values:\n",
+    "#  check and print the number of rows with NaN values\n",
     "print('nans in ratings:', sum(ratings.isna().any(axis=1)))\n",
     "print('nans in users:', sum(users.isna().any(axis=1)))\n",
     "print('nans in beers:', sum(beers.isna().any(axis=1)))\n",
@@ -205,25 +204,6 @@
    "metadata": {},
    "source": [
     "We will deal with these nan values later."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ---------------can be found in util.py---------------\n",
-    "\n",
-    "def split_matched_data(data):\n",
-    "    \"\"\"split the data for two websites\"\"\"\n",
-    "    data_rb = data.filter(like='rb', axis=1)\n",
-    "    data_ba = data.filter(like='ba', axis=1)\n",
-    "    data_rb.columns = data_rb.iloc[0]\n",
-    "    data_rb = data_rb.iloc[1:].reset_index(drop=True)\n",
-    "    data_ba.columns = data_ba.iloc[0]\n",
-    "    data_ba = data_ba.iloc[1:].reset_index(drop=True)\n",
-    "    return data_rb, data_ba"
    ]
   },
   {
@@ -242,7 +222,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Features in 'Ratings' dataset"
+    "### Features in 'Ratings' dataset\n",
+    "[back to content](#Content)"
    ]
   },
   {
@@ -1338,14 +1319,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# min_max_scaler = MinMaxScaler()\n",
-    "# ratings_rb[convert_features] = pd.DataFrame(min_max_scaler.fit_transform(ratings_rb[convert_features]), columns=convert_features)\n",
-    "# ratings_ba[convert_features] = pd.DataFrame(min_max_scaler.fit_transform(ratings_ba[convert_features]), columns=convert_features)\n",
-    "\n",
+    "# scaling th features\n",
     "ratings_rb_with_convert_features = ratings_rb[convert_features]\n",
     "ratings_ba_with_convert_features = ratings_ba[convert_features]\n",
-    "ratings_rb[convert_features] = (ratings_rb_with_convert_features - ratings_rb_with_convert_features.min()) / (ratings_rb_with_convert_features.max() - ratings_rb_with_convert_features.min())\n",
-    "ratings_ba[convert_features] = (ratings_ba_with_convert_features - ratings_ba_with_convert_features.min()) / (ratings_ba_with_convert_features.max() - ratings_ba_with_convert_features.min())"
+    "ratings_rb[convert_features] = (\n",
+    "    ratings_rb_with_convert_features - ratings_rb_with_convert_features.min()\n",
+    ") / (ratings_rb_with_convert_features.max() - ratings_rb_with_convert_features.min())\n",
+    "ratings_ba[convert_features] = (\n",
+    "    ratings_ba_with_convert_features - ratings_ba_with_convert_features.min()\n",
+    ") / (ratings_ba_with_convert_features.max() - ratings_ba_with_convert_features.min())"
    ]
   },
   {
@@ -1576,7 +1558,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Features in 'Users' dataset"
+    "### Features in 'Users' dataset\n",
+    "[back to content](#Content)"
    ]
   },
   {
@@ -1606,6 +1589,7 @@
     }
    ],
    "source": [
+    "# check if users' locations from the two websites are different\n",
     "False in users_loc_ba == users_loc_rb"
    ]
   },
@@ -1622,7 +1606,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# splite the us and non-us users\n",
+    "# splite the US and non-US users\n",
     "users_loc_ba_US = users_loc_ba[users_loc_ba.index.str.contains('United States')]\n",
     "users_loc_ba_nonUS = users_loc_ba[~users_loc_ba.index.str.contains('United States')]"
    ]
@@ -1644,6 +1628,7 @@
     }
    ],
    "source": [
+    "# plot the result\n",
     "fig, axs = plt.subplots(2, 1, figsize = (18, 10))\n",
     "users_loc_ba_nonUS.plot(kind = 'bar', ax = axs[0])\n",
     "users_loc_ba_US.plot(kind = 'bar', ax = axs[1])\n",
@@ -1666,7 +1651,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Features in 'Breweries' dataset"
+    "### Features in 'Breweries' dataset\n",
+    "[back to content](#Content)"
    ]
   },
   {
@@ -1675,6 +1661,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# group breweries data by locations\n",
     "breweries_loc_rb = breweries_rb.groupby('location').size()\n",
     "breweries_loc_ba = breweries_ba.groupby('location').size()"
    ]
@@ -1696,6 +1683,7 @@
     }
    ],
    "source": [
+    "# check if breweries' locations from the two websites are different\n",
     "False in breweries_loc_rb == breweries_loc_ba"
    ]
   },
@@ -1705,7 +1693,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# splite the us and non_us locations\n",
+    "# splite the US and non_US locations\n",
     "breweries_loc_ba_US = breweries_loc_ba[\n",
     "    breweries_loc_ba.index.str.contains(\"United States\", \"U.S.\")\n",
     "    | breweries_loc_ba.index.str.contains(\"U.S.\")\n",
@@ -1750,7 +1738,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Beer Styles"
+    "### Beer Styles\n",
+    "[back to content](#Content)"
    ]
   },
   {
@@ -2083,7 +2072,9 @@
    "metadata": {},
    "source": [
     "## Mathematical Details\n",
-    "### 1. K-means\n",
+    "[back to content](#Content)\n",
+    "\n",
+    "### K-means\n",
     "K-means can be considered an optimization problem\n",
     "$$\n",
     "\\begin{align*}\n",
@@ -2110,7 +2101,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Features in beer's name"
+    "## Features in beer's name\n",
+    "[back to content](#Content)"
    ]
   },
   {
@@ -2133,6 +2125,8 @@
    "metadata": {},
    "source": [
     "### Sentiment analysis for beer's name\n",
+    "[back to content](#Content)\n",
+    "\n",
     "Beer names come in a wide range of styles, from straightforward descriptions like \"Co-op Wheat Beer\" to creatively evocative ones like \"Just Married\" or \"Pheasantry Dancing Dragonfly\".\n",
     "\n",
     "We score it with variable $𝑁𝑎𝑚𝑒𝑆𝑒𝑛𝑡𝑖𝑚𝑒𝑛𝑡$ expressing whether the bear's name is positive or negative, and to what extent it is, using an NLP model for sentiment analysis.\n",
@@ -2334,30 +2328,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ratings_rb_name.to_csv(\"data/ratings_rb_name.csv\")\n",
-    "# ratings_ba_name.to_csv(\"data/ratings_ba_name.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ratings_rb_name = pd.read_csv('data/ratings_rb_name.csv')\n",
-    "# ratings_ba_name = pd.read_csv('data/ratings_ba_name.csv')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Indentity the language for beer's name\n",
+    "[back to content](#Content)\n",
     "\n",
     "The beers' names vary not only in style but also in the language they are presented in, from English to Finnish, Hungarian, and more.\n",
     "\n",
@@ -2522,7 +2497,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Regress - Beer Name Reflect Beer Flavor"
+    "### Regress - Beer Name Reflect Beer Flavor\n",
+    "[back to content](#Content)"
    ]
   },
   {
@@ -3111,7 +3087,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Beer Recommendation System ##"
+    "## Beer Recommendation System\n",
+    "[back to content](#Content)"
    ]
   },
   {
@@ -4563,7 +4540,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Keyword analysis ##"
+    "### Keyword analysis\n",
+    "[back to content](#Content)"
    ]
   },
   {
