--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -4526,7 +4526,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.write_html(\"regional_analysis.html\")"
+    "fig.write_html(\"other/regional_analysis.html\")"
    ]
   },
   {
@@ -5478,7 +5478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
