--- a/main_logic.ipynb
+++ b/main_logic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,8 @@
    "source": [
     "# Content:\n",
     "[1. Data Processing](##Data-Processing)\n",
+    "\n",
+    "- [1.1 Convert Data into Json Format](###Convert-Data-into-Json-Format)\n",
     "\n",
     "[2. Beer Style Similarities](##Beer-Style-Similarities)\n",
     "\n",
@@ -45,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-7-a32fd56fb7d8>:2: DtypeWarning: Columns (0,1,2,3,4,5,8,10,11,12,13,15,16,17,18,19,20,23,25,26,27,29,30,31,32) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "<ipython-input-12-a32fd56fb7d8>:2: DtypeWarning: Columns (0,1,2,3,4,5,8,10,11,12,13,15,16,17,18,19,20,23,25,26,27,29,30,31,32) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  beers_m = pd.read_csv('data/m_beers.csv')\n",
-      "<ipython-input-7-a32fd56fb7d8>:3: DtypeWarning: Columns (0,1,2,3,5,7,8,9,10,11,13,17,18,19,20,22,24,25,26,27,29,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "<ipython-input-12-a32fd56fb7d8>:3: DtypeWarning: Columns (0,1,2,3,5,7,8,9,10,11,13,17,18,19,20,22,24,25,26,27,29,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  ratings_m = pd.read_csv('data/m_ratings.csv')\n"
      ]
     }
@@ -73,6 +75,46 @@
     "users_rb, users_ba = split_matched_data(users_m)\n",
     "ratings_rb, ratings_ba = split_matched_data(ratings_m)\n",
     "breweries_rb, breweries_ba = split_matched_data(breweries_m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convert Data into Json Format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop nan values\n",
+    "ratings_ba.dropna(inplace=True)\n",
+    "ratings_ba.reset_index(drop=True)\n",
+    "\n",
+    "# The type of all the features is 'object'. Convert some of them to float.\n",
+    "convert_features=['abv', 'appearance', 'aroma', 'overall', 'palate', 'rating', 'taste']\n",
+    "ratings_rb[convert_features] = ratings_rb[convert_features].apply(pd.to_numeric, errors = 'coerce')\n",
+    "ratings_ba[convert_features] = ratings_ba[convert_features].apply(pd.to_numeric, errors = 'coerce')\n",
+    "\n",
+    "# scaling the features\n",
+    "ratings_rb_with_convert_features = ratings_rb[convert_features]\n",
+    "ratings_ba_with_convert_features = ratings_ba[convert_features]\n",
+    "ratings_rb[convert_features] = (\n",
+    "    ratings_rb_with_convert_features - ratings_rb_with_convert_features.min()\n",
+    ") / (ratings_rb_with_convert_features.max() - ratings_rb_with_convert_features.min())\n",
+    "ratings_ba[convert_features] = (\n",
+    "    ratings_ba_with_convert_features - ratings_ba_with_convert_features.min()\n",
+    ") / (ratings_ba_with_convert_features.max() - ratings_ba_with_convert_features.min())\n",
+    "\n",
+    "# Convert Datafrome into json\n",
+    "ratings_rb[convert_features].to_json('viz_data/ratings_rb.json', orient='records')\n",
+    "ratings_ba[convert_features].to_json('viz_data/ratings_ba.json', orient='records')\n",
+    "# Correlation\n",
+    "ratings_rb[convert_features].corr().to_json('viz_data/ratings_rb_corr.json', orient='records')\n",
+    "ratings_ba[convert_features].corr().to_json('viz_data/ratings_ba_corr.json', orient='records')"
    ]
   },
   {
@@ -222,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
