data story text

--- a/main_logic.ipynb
+++ b/main_logic.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/DXY/opt/anaconda3/lib/python3.8/site-packages/fuzzywuzzy/fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
+      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -47,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-12-a32fd56fb7d8>:2: DtypeWarning: Columns (0,1,2,3,4,5,8,10,11,12,13,15,16,17,18,19,20,23,25,26,27,29,30,31,32) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "<ipython-input-2-a32fd56fb7d8>:2: DtypeWarning: Columns (0,1,2,3,4,5,8,10,11,12,13,15,16,17,18,19,20,23,25,26,27,29,30,31,32) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  beers_m = pd.read_csv('data/m_beers.csv')\n",
-      "<ipython-input-12-a32fd56fb7d8>:3: DtypeWarning: Columns (0,1,2,3,5,7,8,9,10,11,13,17,18,19,20,22,24,25,26,27,29,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "<ipython-input-2-a32fd56fb7d8>:3: DtypeWarning: Columns (0,1,2,3,5,7,8,9,10,11,13,17,18,19,20,22,24,25,26,27,29,31) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  ratings_m = pd.read_csv('data/m_ratings.csv')\n"
      ]
     }
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,8 +122,9 @@
     "ratings_rb[convert_features].to_json('viz_data/ratings_rb.json', orient='records')\n",
     "ratings_ba[convert_features].to_json('viz_data/ratings_ba.json', orient='records')\n",
     "# Correlation\n",
-    "ratings_rb[convert_features].corr().to_json('viz_data/ratings_rb_corr.json', orient='records')\n",
-    "ratings_ba[convert_features].corr().to_json('viz_data/ratings_ba_corr.json', orient='records')"
+    "detailed_features = ['abv', 'appearance', 'aroma', 'palate', 'taste']\n",
+    "ratings_rb[detailed_features].corr().to_json('viz_data/ratings_rb_corr.json', orient='records')\n",
+    "ratings_ba[detailed_features].corr().to_json('viz_data/ratings_ba_corr.json', orient='records')"
    ]
   },
   {
